Styled carousel element

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,6 @@ p {
 /* Testimonials */
 
 #testimonials {
-    padding: 7% 15%;
     text-align: center;
     background-color: #ef8172;
     color: #fff;
@@ -106,6 +105,10 @@ p {
     width: 15%;
     border-radius: 100%;
     margin: 20px;
+}
+
+.carousel-item {
+    padding: 7% 15%;
 }
 
 #press {
