--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 .container-fluid {
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
 }
 
 h1 {
@@ -67,8 +67,10 @@ p {
 /* Title Image */
 
 .title-image {
-    width: 60%;
+    width: 18%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 23%;
 }
 
 
@@ -76,6 +78,8 @@ p {
 
 #features {
     padding: 7% 15%;
+    background-color: #fff;
+    position: relative;
 }
 
 .feature-box {
@@ -132,4 +136,15 @@ p {
 
 .pricing-column {
     padding: 3% 2%;
+}
+
+@media (max-width: 1028px) {
+    #title {
+        text-align: center;
+    }
+    .title-image {
+        position: static;
+        transform: rotate(0);
+        width: 60%;
+    }
 }
