--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,26 @@
 body {
     font-family: 'Montserrat';
+    text-align: center;
 }
 
-#title {
-    background-color: #ff4c68
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Montserrat';
+    font-weight: bold;
 }
 
-.container-fluid {
-    padding: 3% 15% 7%;
+p {
+    color: #8f8f8f;
 }
 
-h1 {
+
+/* Headings */
+
+.big-heading {
     font-family: 'Montserrat';
     font-weight: 900;
     font-size: 3.5rem;
@@ -18,20 +28,28 @@ h1 {
     color: #fff;
 }
 
-h2 {
-    font-family: 'Montserrat';
-    font-weight: bold;
+.section-heading {
     font-size: 3rem;
     line-height: 1.5;
 }
 
-h3 {
-    font-family: 'Montserrat';
-    font-weight: bold;
+
+/* Containers */
+
+.container-fluid {
+    padding: 7% 15%;
 }
 
-p {
-    color: #8f8f8f;
+
+/* Sections */
+
+.red-section {
+    background-color: #ff4c68;
+    color: #fff;
+}
+
+.white-section {
+    background-color: #fff;
 }
 
 
@@ -64,7 +82,12 @@ p {
 }
 
 
-/* Title Image */
+/* Title */
+
+#title .container-fluid {
+    padding: 3% 15% 7%;
+    text-align: left;
+}
 
 .title-image {
     width: 18%;
@@ -77,9 +100,12 @@ p {
 /* Features Section  */
 
 #features {
-    padding: 7% 15%;
     background-color: #fff;
     position: relative;
+}
+
+.feature-title {
+    font-size: 1.5rem;
 }
 
 .feature-box {
@@ -100,9 +126,12 @@ p {
 /* Testimonials */
 
 #testimonials {
-    text-align: center;
     background-color: #ef8172;
-    color: #fff;
+}
+
+.testimonial-text {
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
 .testimonial-image {
@@ -111,13 +140,8 @@ p {
     margin: 20px;
 }
 
-.carousel-item {
-    padding: 7% 15%;
-}
-
 #press {
     background-color: #ef8172;
-    text-align: center;
     padding-bottom: 3%;
 }
 
@@ -131,7 +155,11 @@ p {
 
 #pricing {
     padding: 100px;
-    text-align: center;
+}
+
+.price-text {
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
 .pricing-column {
@@ -139,33 +167,10 @@ p {
 }
 
 
-/* CTA */
-
-#cta {
-    background-color: #ff4c68;
-    color: #fff;
-    text-align: center;
-    padding: 7% 15%;
-}
-
-.cta-heading {
-    font-family: 'Montserrat';
-    font-weight: bold;
-    font-size: 3rem;
-    line-height: 1.5;
-}
-
-
 /* Footer */
-
-#footer {
-    padding: 7% 15%;
-    text-align: center;
-}
 
 .social-icon {
     margin: 20px 10px;
-    color: #8f8f8f;
 }
 
 
